# stacksafe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  MyHello.cpp  README.md  check.sh  experiments.sh  fakear  fakeclang
cmake/: BuildType.cmake  CompileCommands.cmake  DevelopFlag.cmake  DownloadGoogleTest.cmake  EnsureSources.cmake  GitSubmodule.cmake  OverrideCache.cmake  TopDir.cmake
cmake/DownloadGoogleTest/: CMakeLists.txt.in
experiments/: cost.plt  dist.plt
gtest/: Makefile  collection.cpp
gtest/src/: collection.cpp
ir/: Makefile
pass/: CMakeLists.txt  analyzer.cpp  dataflow.cpp  dataflow.hpp  stacksafe.cpp  stacksafe.hpp
src/: .dir-locals.el  CMakeLists.txt  Makefile  abstract.cpp  abstract.hpp  abstraction.cpp  abstraction.hpp  analyzer.cpp  analyzer.hpp  base.cpp  base.hpp  block.cpp  block.hpp  blocks.cpp  blocks.hpp  cache.cpp  cache.hpp  cell.cpp  cell.hpp  collection.cpp  collection.hpp  component.cpp  component.hpp  dataflow.cpp  dataflow.hpp  debug.cpp  debug.hpp  depend.cpp  depend.hpp  domain.cpp  domain.hpp  effect.cpp  effect.hpp  env.cpp  env.hpp  environment.cpp  environment.hpp  error.cpp  error.hpp  fabric.cpp  (+80 more)
src/json/: json_fwd.hpp
stacksafe/: CMakeLists.txt
test/: CMakeLists.txt  Makefile
unittest/: CMakeLists.txt  Makefile  allocainst.cpp  collection.cpp  envtest.cpp  envtest.hpp  example.cpp  heaptest.cpp  heaptest.hpp  testinst.cpp
